remove .row.text-centre wrapping div this was causing a bug where text would hit the edge of the screen because it added negative margin.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -13,6 +13,7 @@
 .container#banner {
   color: white;
   padding-bottom: 1.5em;
+  text-align: center;
 
   @media (min-width: $screen-md-min) {
     padding-top: 4em;
